# sechat

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: poetry.yml
docs/: build-requirements.txt  index.md
docs/api/: events.md  index.md
docs/javascript/: readthedocs.js
docs/source/: api.rst  conf.py  example.rst  index.rst  sourcecode.rst  supp.rst
sechat/: __init__.py  __init_old.py  bot.py  credentials.py  errors.py  events.py  room.py  server.py  servers.py  tests.py
