[tool.poetry]
name = "sechat"
version = "1.1.2"
description = "A BETTER Stack Exchange chat library."
readme = "README.md"
authors = ["Ginger"]

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0.0"
requests = "^2.27.0"
bs4 = "^0.0.1"
websocket-client = "^1.3.0"

[tool.poetry.dev-dependencies]
# Remember to update docs/build-requirements.txt!
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"
build = "^0.8.0"
tomli = "^2.0.1" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
