[tool.poetry]
name = "sechat"
version = "3.0.0"
description = "A BETTER Stack Exchange chat library."
readme = "README.md"
authors = ["Ginger <75683114+gingerindustries@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<4.0.0"
bs4 = "^0.0.1"
aiohttp = "^3.8.3"
backoff = "^2.2.1"
lxml = "^5.3.0"
yarl = "^1.15.2"
pydantic = "^2.9.2"

[tool.poetry.dev-dependencies]
# Remember to update docs/build-requirements.txt!
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"
build = "^0.8.0"
tomli = "^2.0.1" 

[tool.poetry.group.dev.dependencies]
black = {version = "^23.1.0", allow-prereleases = true}

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
