[tool.poetry]
name = "sechat"
version = "3.0.0"
description = "A BETTER Stack Exchange chat library."
readme = "README.md"
authors = ["Ginger <75683114+gingershaped@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<4.0.0"
bs4 = "^0.0.1"
aiohttp = "^3.8.3"
backoff = "^2.2.1"
lxml = "^5.3.0"
yarl = "^1.15.2"
pydantic = "^2.9.2"
mkdocs = {version = "^1.6.1", optional = true}
mkdocstrings = {version = "^0.26.2", optional = true}
mkdocstrings-python = {version = "^1.12.2", optional = true}
mkdocs-material = {version = "^9.5.42", optional = true}

[tool.poetry.group.dev.dependencies]
black = {version = ">=23.1,<25.0", allow-prereleases = true}

[tool.poetry.extras]
docs = ["mkdocs", "mkdocstrings", "mkdocstrings-python", "mkdocs-material"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
